--- a/src/main/resources/static/src/pages/perfiles.html
+++ b/src/main/resources/static/src/pages/perfiles.html
@@ -114,14 +114,14 @@
                                                 <option selected value="0">Albañilería</option>
                                                 <option value="1">Carpintería</option>
                                                 <option value="2">Cerrajería</option>
-                                                <option value="3">Diseño y Decoración</option>
+                                                <option value="3">Diseño</option>
                                                 <option value="4">Electricidad</option>
-                                                <option value="5">Jardinería y Paisajismo</option>
+                                                <option value="5">Jardinería</option>
                                                 <option value="6">Limpieza</option>
-                                                <option value="7">Mantenimiento y Reparación</option>
+                                                <option value="7">Mantenimiento</option>
                                                 <option value="9">Pintura</option>
                                                 <option value="10">Plomería</option>
-                                                <option value="11">Tecnología y Electrónica</option>
+                                                <option value="11">Tecnología</option>
                                                 <option value="12">Transporte</option>
                                                 <option value="8">Otro</option>
                                             </select>
@@ -175,11 +175,9 @@
     <script src="../scripts/footer.js"></script> 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="../scripts/perfilesAPI.js"></script>  
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/js/all.min.js"
-        integrity="sha512-3r7E6lH2S1X9pQzI4QzB2c3omDkhPi6GxWxS3A3aZ0d9wA3V8xEwrJUGzQ3EbKLBefYl8JBL5f8zQUnm4ywFqQ=="
-        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-9k9xKjLhGp7IAtSbiPSd8rj5V5a6M5K8u9l0dW3Xy5mj1K3lAmwUO6fypGM1R4EJ" crossorigin="anonymous"></script>
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"></script>
     <script src="../scripts/perfiles.js"></script>
     <script src="../scripts/nombresLocalStorage.js"></script>
 </body>
